# food-security-analysis

./: .gitignore  README.md  pyproject.toml
data-collection/: agricultural_scraper.py
data/agricultural/: aquastat.csv
data/agricultural/Data_Extract_From_World_Development_Indicators/: 4dab8712-5609-4553-bf72-f14f828add49_Country - Metadata.csv  4dab8712-5609-4553-bf72-f14f828add49_Data.csv  4dab8712-5609-4553-bf72-f14f828add49_Series - Metadata.csv
data/food_security/: FAOSTAT_country_group.csv  FAOSTAT_data_country.csv  FAOSTAT_definitions_items.csv  Food_Security_Data_E_Flags.csv  WORLD_BANK_WDI.csv
notebooks/: EDA_agricultural.ipynb
noteebooks/: food_security_eda.ipynb
